<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    tools:context=".Activity.RegisterActivity">

    <LinearLayout
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="5dp"
            android:text="@string/new_user_registration"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_Register_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:drawablePadding="5dp"
        android:hint="@string/minimum_3_character"
        android:inputType="text"
        android:padding="8dp" />

    <EditText
        android:id="@+id/et_Register_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Register_Name"
        android:layout_marginTop="7dp"
        android:background="#FFF"

        android:drawablePadding="5dp"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:padding="8dp" />

    <EditText
        android:id="@+id/et_register_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Register_Email"
        android:layout_marginTop="7dp"
        android:background="#FFF"

        android:drawablePadding="5dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="8dp" />

    <EditText
        android:id="@+id/et_Register_Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_register_mobile_number"
        android:layout_marginTop="7dp"
        android:background="#FFF"

        android:drawablePadding="5dp"
        android:hint="address"
        android:inputType="text"
        android:padding="8dp" />

    <EditText
        android:id="@+id/et_Register_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Register_Address"
        android:layout_marginTop="7dp"
        android:background="#FFF"

        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:padding="8dp" />

    <EditText
        android:id="@+id/et_Register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Register_Password"
        android:layout_marginTop="7dp"
        android:background="#FFF"

        android:drawablePadding="5dp"
        android:hint="@string/confirm_password"
        android:inputType="numberPassword"
        android:padding="8dp" />

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Register_confirm_password"
        android:layout_marginTop="25dp"
        android:background="#B12C14"
        android:padding="8dp"
        android:text="Register"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/signIn"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_height="45dp"
        android:layout_width="45dp"
        android:layout_below="@id/btn_Register"
        android:padding="6dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>